--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bastards</title>
+  <title>Who the Bloody Hell Are They!</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= favicon_link_tag asset_path('favicons/favicon.ico') %>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
