--- a/app/views/components/_menu.html.erb
+++ b/app/views/components/_menu.html.erb
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse" id="mynavbar">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/about">About us</a>
+          <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/candidates">Candidates</a>
+          <a class="nav-link" href="/faqs">Candidates</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/electorates">Electorates</a>
