--- a/app/views/components/_menu.html.erb
+++ b/app/views/components/_menu.html.erb
@@ -1,22 +1,18 @@
 <nav class="navbar navbar-expand-md navbar-dark  fixed-topk">
   <div class="container-fluid container">
-    <a class="navbar-brand" href="/">Who the bloody hell are they!</a>
+    <a href="/" title="Who the bloody hell are they?" rel="home" class="site-logo d-block p-3">
+      <%= image_tag "logo.png", height: 180 %>
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="mynavbar">
-      <ul class="navbar-nav me-auto">
+    <div class="collapse navbar-collapse justify-content-end" id="mynavbar">
+      <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/faqs">Candidates</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/electorates">Electorates</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/professions">Professions</a>
+          <a class="nav-link" href="/faqs">FAQ</a>
         </li>
       </ul>
     </div>
