--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
 <div class="region region-header bg-dark">
   <%= render "components/menu" %>
 </div>
+<div class="region region-header bg-secondary">
+  <%= render "components/secondary-menu" %>
+</div>
 
 <div class="container region region-content">
   <%= yield %>
