--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,7 @@
   <%= render "search_form" %>
   <p>Search for any Candidate, Electorate, Party, Career, Religion, Education, Union or Faction </p>
 </div>
+</div>
 
 <div class="container">
   <div class="row">
