--- a/app/views/religions/index.html.erb
+++ b/app/views/religions/index.html.erb
@@ -21,11 +21,34 @@
     <%= pie_chart @nat_religions %>
   </div>
 
-<div id="religions">
-  <% @religions.each do |religion| %>
-    <%= render religion %>
-    <p>
-      <%= link_to "Show this religion", religion %>
-    </p>
-  <% end %>
-</div>
+  <div id="religion-candidates">
+    <table id="religion-candidate-table" class="table table-striped">
+      <thead>
+        <tr>
+          <th>Candidate</th>
+          <th>Party</th>
+          <th>Religion</th>
+        </tr>
+      </thead>
+      <% @candidates.each do |candidate| %>
+        <tr>
+          <td><%= safe_link_to(candidate) %></td>
+          <td><%= safe_link_to(candidate.party) %></td>
+          <td><%= safe_link_to(candidate.religion) %></td>
+        </tr>
+      <% end %>
+    </table>
+  </div>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+
+<script>
+$(document).ready(function() {
+    $('#religion-candidate-table').DataTable({
+      paging: false,
+      searching: false
+    });
+} );
+</script>
