--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -23,12 +23,6 @@
 
 
 
-<div class="dave">
-  <p>
-    JC: Dave, I leave all placement to you.
-  </p>
-</div>
-
 <h1>All Candidates by Gender</h1>
 <%= pie_chart @candidates.group(:gender).count %>
 
@@ -51,17 +45,13 @@
         <th>Candidate</th>
         <th>Electorate</th>
         <th>Party</th>
-        <th>Religion</th>
-        <th>Profession</th>
       </tr>
     </thead>
     <% @candidates.each do |candidate| %>
       <tr>
-        <td><%= link_to candidate.name, candidate %></td>
-        <td><%= link_to candidate.electorate.name, candidate.electorate %></td>
-        <td><%= link_to candidate.party.name, candidate.party %></td>
-        <td><%= link_to candidate.religion.name, candidate.religion %></td>
-        <td><%= link_to candidate.profession.name, candidate.profession %></td>
+        <td><%= safe_link_to(candidate) %></td>
+        <td><%= safe_link_to(candidate.electorate) %></td>
+        <td><%= safe_link_to(candidate.party) %></td>
       </tr>
     <% end %>
   </table>
