--- a/app/views/electorates/_electorate.html.erb
+++ b/app/views/electorates/_electorate.html.erb
@@ -5,19 +5,13 @@
       <thead>
         <tr>
           <th>Candidate</th>
-          <th>Electorate</th>
           <th>Party</th>
-          <th>Religion</th>
-          <th>Profession</th>
         </tr>
       </thead>
       <% electorate.candidates.each do |candidate| %>
         <tr>
-          <td><%= link_to candidate.name, candidate %></td>
-          <td><%= link_to candidate.electorate.name, candidate.electorate %></td>
-          <td><%= link_to candidate.party.name, candidate.party %></td>
-          <td><%= link_to candidate.religion.name, candidate.religion %></td>
-          <td><%= link_to candidate.profession.name, candidate.profession %></td>
+          <td><%= safe_link_to(candidate) %></td>
+          <td><%= safe_link_to(candidate.party) %></td>
         </tr>
       <% end %>
     </table>
