--- a/app/views/field_of_studies/_field_of_study.html.erb
+++ b/app/views/field_of_studies/_field_of_study.html.erb
@@ -1,26 +1,35 @@
 <div id="<%= dom_id field_of_study %>">
-  <h2><%= link_to field_of_study.name, field_of_study %></h2>
+  <h2><%= field_of_study.name %></h2>
 
   <div id="field_of_study-candidates">
-    <table id="candidate-field_of_study-table" class="table table-striped">
+    <table id="field-of-study-candidate-table" class="table table-striped">
       <thead>
         <tr>
           <th>Candidate</th>
           <th>Electorate</th>
           <th>Party</th>
-          <th>Religion</th>
-          <th>Profession</th>
         </tr>
       </thead>
       <% field_of_study.candidates.each do |candidate| %>
         <tr>
-          <td><%= link_to candidate.name, candidate %></td>
-          <td><%= link_to candidate.electorate.name, candidate.electorate %></td>
-          <td><%= link_to candidate.party.name, candidate.party %></td>
-          <td><%= link_to candidate.religion.name, candidate.religion %></td>
-          <td><%= link_to candidate.profession.name, candidate.profession %></td>
+          <td><%= safe_link_to(candidate) %></td>
+          <td><%= safe_link_to(candidate.electorate) %></td>
+          <td><%= safe_link_to(candidate.party) %></td>
         </tr>
       <% end %>
     </table>
   </div>
 </div>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+
+<script>
+$(document).ready(function() {
+    $('#field-of-study-candidate-table').DataTable({
+      paging: false,
+      searching: false
+    });
+} );
+</script>
