--- a/app/views/professions/_profession.html.erb
+++ b/app/views/professions/_profession.html.erb
@@ -1,29 +1,36 @@
 <div id="<%= dom_id profession %>">
 
 
-  <h2><%= link_to profession.name, profession %></h2>
+  <h2><%= profession.name %></h2>
 
-  <div id="religion-candidates">
+  <div id="profession-candidates">
     <table id="profession-candidate-table" class="table table-striped">
       <thead>
         <tr>
           <th>Candidate</th>
           <th>Electorate</th>
           <th>Party</th>
-          <th>Religion</th>
-          <th>Profession</th>
         </tr>
       </thead>
       <% profession.candidates.each do |candidate| %>
         <tr>
-          <td><%= link_to candidate.name, candidate %></td>
-          <td><%= link_to candidate.electorate.name, candidate.electorate %></td>
-          <td><%= link_to candidate.party.name, candidate.party %></td>
-          <td><%= link_to candidate.religion.name, candidate.religion %></td>
-          <td><%= link_to candidate.profession.name, candidate.profession %></td>
+          <td><%= safe_link_to(candidate) %></td>
+          <td><%= safe_link_to(candidate.electorate) %></td>
+          <td><%= safe_link_to(candidate.party) %></td>
         </tr>
       <% end %>
     </table>
   </div>
-
 </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+
+<script>
+$(document).ready(function() {
+    $('#profession-candidate-table').DataTable({
+      paging: false,
+      searching: false
+    });
+} );
+</script>
