--- a/app/views/qualification_levels/_qualification_level.html.erb
+++ b/app/views/qualification_levels/_qualification_level.html.erb
@@ -1,5 +1,5 @@
 <div id="<%= dom_id qualification_level %>">
-  <h2><%= link_to qualification_level.name, qualification_level %></h2>
+  <h2><%= qualification_level.name %></h2>
 
   <div id="qualification_level-candidates">
     <table id="candidate-qualification_level-table" class="table table-striped">
@@ -8,19 +8,28 @@
           <th>Candidate</th>
           <th>Electorate</th>
           <th>Party</th>
-          <th>Religion</th>
-          <th>Profession</th>
         </tr>
       </thead>
       <% qualification_level.candidates.each do |candidate| %>
         <tr>
-          <td><%= link_to candidate.name, candidate %></td>
-          <td><%= link_to candidate.electorate.name, candidate.electorate %></td>
-          <td><%= link_to candidate.party.name, candidate.party %></td>
-          <td><%= link_to candidate.religion.name, candidate.religion %></td>
-          <td><%= link_to candidate.profession.name, candidate.profession %></td>
+          <td><%= safe_link_to(candidate) %></td>
+          <td><%= safe_link_to(candidate.electorate) %></td>
+          <td><%= safe_link_to(candidate.party) %></td>
         </tr>
       <% end %>
     </table>
   </div>
 </div>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+
+<script>
+$(document).ready(function() {
+    $('#profession-candidate-table').DataTable({
+      paging: false,
+      searching: false
+    });
+} );
+</script>
