--- a/app/views/religions/_religion.html.erb
+++ b/app/views/religions/_religion.html.erb
@@ -1,5 +1,5 @@
 <div id="<%= dom_id religion %>">
-  <h2><%= link_to religion.name, religion %></h2>
+  <h2><%= religion.name %></h2>
 
   <div id="religion-candidates">
     <table id="candidate-religion-table" class="table table-striped">
@@ -8,17 +8,13 @@
           <th>Candidate</th>
           <th>Electorate</th>
           <th>Party</th>
-          <th>Religion</th>
-          <th>Profession</th>
         </tr>
       </thead>
       <% religion.candidates.each do |candidate| %>
         <tr>
-          <td><%= link_to candidate.name, candidate %></td>
-          <td><%= link_to candidate.electorate.name, candidate.electorate %></td>
-          <td><%= link_to candidate.party.name, candidate.party %></td>
-          <td><%= link_to candidate.religion.name, candidate.religion %></td>
-          <td><%= link_to candidate.profession.name, candidate.profession %></td>
+          <td><%= safe_link_to(candidate) %></td>
+          <td><%= safe_link_to(candidate.electorate) %></td>
+          <td><%= safe_link_to(candidate.party) %></td>
         </tr>
       <% end %>
     </table>
