--- a/app/views/unions/_union.html.erb
+++ b/app/views/unions/_union.html.erb
@@ -1,24 +1,20 @@
 <div id="<%= dom_id union %>">
-  <h2><%= link_to union.name, union %></h2>
+  <h2><%= union.name %></h2>
 
-  <div id="union-candidates">
-    <table id="candidate-union-table" class="table table-striped">
+  <div id="candidates">
+    <table id="union-candidate-table" class="table table-striped">
       <thead>
         <tr>
           <th>Candidate</th>
           <th>Electorate</th>
           <th>Party</th>
-          <th>Religion</th>
-          <th>Profession</th>
         </tr>
       </thead>
-      <% union.candidates.each do |candidate| %>
+      <% @union.candidates.each do |candidate| %>
         <tr>
-          <td><%= link_to candidate.name, candidate %></td>
-          <td><%= link_to candidate.electorate.name, candidate.electorate %></td>
-          <td><%= link_to candidate.party.name, candidate.party %></td>
-          <td><%= link_to candidate.religion.name, candidate.religion %></td>
-          <td><%= link_to candidate.profession.name, candidate.profession %></td>
+          <td><%= safe_link_to(candidate) %></td>
+          <td><%= safe_link_to(candidate.electorate) %></td>
+          <td><%= safe_link_to(candidate.party) %></td>
         </tr>
       <% end %>
     </table>
