hard code legend on canfidates page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -98,3 +98,13 @@ h2.group-header {
   }
 
 }
+
+.legend.blue {
+    background-color: blue;
+    color: white;
+}
+
+.legend.pink {
+    background-color: pink;
+    color: black;
+}
