--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -28,12 +28,12 @@
 <div class="flex-container gender row">
   <h2 class="col-lg-12">Gender</h2>
   <div class="col-lg-2">
-    <h2>Legend</h2>
-      <div class="legend blue">Male</div>
-      <div class="legend pink">Female</div>
+    <h3>Legend</h3>
+      <div class="legend blue float-start float-lg-none">Male</div>
+      <div class="legend pink float-start float-lg-none">Female</div>
   </div>
   <div class="col-lg-3">
-    <h2>Candidates</h2>
+    <h3>Candidates</h3>
     <%= pie_chart(
       @candidates_by_gender_data,
       colors: @gender_colors_for_candidates,
@@ -41,7 +41,7 @@
     ) %>
   </div>
   <div class="col-lg-3">
-    <h2>General Population</h2>
+    <h3>General Population</h3>
     <%= pie_chart(
       @genpop_gender,
       colors: @gender_colors_for_genpop,
@@ -49,7 +49,7 @@
     ) %>
   </div>
   <div class="col-lg-4">
-    <h2>why are they so male?</h2>
+    <h3>why are they so male?</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maiores explicabo voluptatibus deleniti unde non
       pariatur quod fugit numquam atque dignissimos culpa sapiente saepe necessitatibus repudiandae id architecto,
       tempore sunt.</p>
