--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -33,7 +33,7 @@
       <div class="legend pink float-start float-lg-none">Female</div>
   </div>
   <div class="col-lg-3">
-    <h3>Candidates</h3>
+    <h3>All Candidates</h3>
     <%= pie_chart(
       @candidates_by_gender_data,
       colors: @gender_colors_for_candidates,
@@ -53,6 +53,25 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maiores explicabo voluptatibus deleniti unde non
       pariatur quod fugit numquam atque dignissimos culpa sapiente saepe necessitatibus repudiandae id architecto,
       tempore sunt.</p>
+  </div>
+</div>
+
+<div class="flex-container gender row">
+  <div class="col-lg-3">
+    <h3>Labor Candidates</h3>
+    <%= pie_chart(
+      @alp_candidates_by_gender_data,
+      colors: @gender_colors_for_alp_candidates,
+      legend: false
+    ) %>
+  </div>
+  <div class="col-lg-3">
+    <h3>Coalition Candidates</h3>
+    <%= pie_chart(
+      @coalition_candidates_by_gender_data,
+      colors: @gender_colors_for_coalition_candidates,
+      legend: false
+    ) %>
   </div>
 </div>
 
