--- a/app/views/religions/index.html.erb
+++ b/app/views/religions/index.html.erb
@@ -2,24 +2,39 @@
 
 <h1>Religions</h1>
 
-<p>We found that the politicians claim to be more religious than the rest of us. Shock!</p>
+  <div>
+    <h3>General Population</h3>
+    <%= pie_chart(
+      @genpop_religions,
+      colors: @religion_colors_for_genpop,
+      legend: false
+    ) %>
+  </div>
+  <div>
+    <h3>All Candidates</h3>
+    <%= pie_chart(
+      @all_candidates_by_religion_data,
+      colors: @religion_colors_for_all_candidates,
+      legend: false
+    ) %>
+  </div>
+  <div>
+    <h3>ALP Candidates</h3>
+    <%= pie_chart(
+      @alp_candidates_by_religion_data,
+      colors: @religion_colors_for_alp_candidates,
+      legend: false
+    ) %>
+  </div>
+  <div>
+    <h3>Coalition Candidates</h3>
+    <%= pie_chart(
+      @coalition_candidates_by_religion_data,
+      colors: @religion_colors_for_coalition_candidates,
+      legend: false
+    ) %>
+  </div>
 
-  <div>
-    <h2>General Population by Religion</h2>
-    <%= pie_chart @genpop_religions %>
-  </div>
-  <div>
-    <h2>ALP by Religion</h2>
-    <%= pie_chart @alp_religions %>
-  </div>
-  <div>
-    <h2>Liberals by Religion</h2>
-    <%= pie_chart @lib_religions %>
-  </div>
-  <div>
-    <h2>Nationals by Religion</h2>
-    <%= pie_chart @nat_religions %>
-  </div>
 
   <div id="religion-candidates">
     <table id="religion-candidate-table" class="table table-striped">
