--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -2,27 +2,8 @@
   Skip to the <a href="#data">data</a>
 </div>
 
-<h2>All Candidates by party</h2>
-<p>Not sure if this is useful, but it does show macro size of the data we have.</p>
-<%= pie_chart @candidates_by_party_data, colors: @party_colors_for_candidates %>
+<h1>Candidates</h1>
 
-<div class="flex-container religion row">
-  <h2 class="col-lg-12">Religion</h2>
-  <div class="col-lg-3">
-    <h2>All Candidates</h2>
-    <%= pie_chart @candidates.joins(:religion).group(:religion).count.map { |k, v| [k.name, v] }.to_h %>
-  </div>
-  <div class="col-lg-3">
-    <h2>General Population</h2>
-    <%= pie_chart @genpop_religion %>
-  </div>
-  <div class="col-lg-6">
-    <h2>why are they so religious?</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maiores explicabo voluptatibus deleniti unde non
-      pariatur quod fugit numquam atque dignissimos culpa sapiente saepe necessitatibus repudiandae id architecto,
-      tempore sunt.</p>
-  </div>
-</div>
 
 
 <div class="flex-container gender row">
@@ -35,16 +16,16 @@
   <div class="col-lg-3">
     <h3>All Candidates</h3>
     <%= pie_chart(
-      @candidates_by_gender_data,
-      colors: @gender_colors_for_candidates,
+      @gender_data.all_candidates.all_seats.count,
+      colors: @gender_data.all_candidates.all_seats.colors,
       legend: false
     ) %>
   </div>
   <div class="col-lg-3">
     <h3>General Population</h3>
     <%= pie_chart(
-      @genpop_gender,
-      colors: @gender_colors_for_genpop,
+      @gender_data.genpop.count,
+      colors: @gender_data.genpop.colors,
       legend: false
     ) %>
   </div>
@@ -60,16 +41,35 @@
   <div class="col-lg-3">
     <h3>Labor Candidates</h3>
     <%= pie_chart(
-      @alp_candidates_by_gender_data,
-      colors: @gender_colors_for_alp_candidates,
+      @gender_data.alp.all_seats.count,
+      colors: @gender_data.alp.all_seats.colors,
       legend: false
     ) %>
   </div>
   <div class="col-lg-3">
     <h3>Coalition Candidates</h3>
     <%= pie_chart(
-      @coalition_candidates_by_gender_data,
-      colors: @gender_colors_for_coalition_candidates,
+      @gender_data.coalition.all_seats.count,
+      colors: @gender_data.coalition.all_seats.colors,
+      legend: false
+    ) %>
+  </div>
+</div>
+
+<div class="flex-container gender row">
+  <div class="col-lg-3">
+    <h3>Labor Candidates in winnable seats</h3>
+    <%= pie_chart(
+      @gender_data.alp.winnable.count,
+      colors: @gender_data.alp.winnable.colors,
+      legend: false
+    ) %>
+  </div>
+  <div class="col-lg-3">
+    <h3>Coalition Candidates in winnable seats</h3>
+    <%= pie_chart(
+      @gender_data.coalition.winnable.count,
+      colors: @gender_data.coalition.winnable.colors,
       legend: false
     ) %>
   </div>
@@ -84,7 +84,6 @@
       <th>Candidate</th>
       <th>Electorate</th>
       <th>Party</th>
-      <th class="d-none d-lg-table-cell">Religion</th>
       <th class="d-none d-lg-table-cell">Profession</th>
     </tr>
     </thead>
@@ -93,7 +92,6 @@
         <td><%= safe_link_to(candidate) %></td>
         <td><%= safe_link_to(candidate.electorate) %></td>
         <td><%= safe_link_to(candidate.party) %></td>
-        <td class="d-none d-lg-table-cell"><%= safe_link_to(candidate.religion) %></td>
         <td class="d-none d-lg-table-cell"><%= safe_link_to(candidate.profession) %></td>
       </tr>
     <% end %>
