--- a/app/views/components/_secondary-menu.erb
+++ b/app/views/components/_secondary-menu.erb
@@ -6,6 +6,7 @@
     <div class="collapse navbar-collapse" id="secondary-menu">
       <ul class="navbar-nav">
         <li class="nav-item"><%= link_to "Candidates", "/candidates" , class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to "Genders", "/genders" , class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to "Parties", "/parties" , class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to "Primary career", "/professions" , class: 'nav-link', title: 'Primary career pre national politics' %></li>
         <li class="nav-item"><%= link_to "Religion", "/religions" , class: 'nav-link' %></li>
