got the professions page data looking ok, dave to make nice :-)

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -141,6 +141,24 @@ h2.group-header {
   &.gray:before {
     background-color: gray;
   }
+  &.lime:before {
+    background-color: lime;
+  }
+  &.maroon:before {
+    background-color: maroon;
+  }
+  &.aqua:before {
+    background-color: aqua;
+  }
+  &.cadetblue:before {
+    background-color: cadetblue;
+  }
+  &.coral:before {
+    background-color: coral;
+  }
+  &.darkmagenta:before {
+    background-color: darkmagenta;
+  }
 }
 
 //.legend.blue {
