--- a/app/views/professions/index.html.erb
+++ b/app/views/professions/index.html.erb
@@ -6,11 +6,27 @@
 
   <div>
     <h2>Legend</h2>
-      <div class="legend blue float-start float-lg-none">Male</div>
-      <div class="legend pink float-start float-lg-none">Female</div>
-      <div class="legend pink float-start float-lg-none">Female</div>
-      <div class="legend pink float-start float-lg-none">Female</div>
-      <div class="legend pink float-start float-lg-none">Female</div>
+      <div class="legend red float-start float-lg-none">Professionals</div>
+      <div class="legend blue float-start float-lg-none">Military</div>
+      <div class="legend green float-start float-lg-none">Doctors</div>
+      <div class="legend yellow float-start float-lg-none">Teachers</div>
+      <div class="legend indigo float-start float-lg-none">Journalists</div>
+
+
+      <div class="legend cyan float-start float-lg-none">Managers</div>
+      <div class="legend pink float-start float-lg-none">Union Officials</div>
+      <div class="legend purple float-start float-lg-none">Political Staffers</div>
+      <div class="legend teal float-start float-lg-none">Community and personal service workers</div>
+      <div class="legend orange float-start float-lg-none">Lawyers</div>
+      <div class="legend maroon float-start float-lg-none">Sales workers</div>
+
+      <div class="legend lime float-start float-lg-none">Farmer</div>
+      <div class="legend gray float-start float-lg-none">Unknown</div>
+      <div class="legend aqua float-start float-lg-none">Technicians and trades workers</div>
+      <div class="legend cadetblue float-start float-lg-none">Clerical and administrative workers</div>
+      <div class="legend coral float-start float-lg-none">Machinery operators and drivers</div>
+      <div class="legend darkmagenta float-start float-lg-none">Labourers</div>
+
   </div>
   <div>
     <h2>General Population</h2>
